@@ -142,7 +142,7 @@ int mqtt3_bridge_connect(struct mosquitto_db *db, struct mosquitto *context)
 	int i;
 	char *notification_topic;
 	int notification_topic_len;
-	uint8_t notification_payload[2];
+	uint8_t notification_payload;
 
 	if(!context || !context->bridge) return MOSQ_ERR_INVAL;
 
@@ -176,11 +176,10 @@ int mqtt3_bridge_connect(struct mosquitto_db *db, struct mosquitto *context)
 	}
 
 	if(context->bridge->notifications){
-		notification_payload[0] = '0';
-		notification_payload[1] = '\0';
+		notification_payload = '0';
 		if(context->bridge->notification_topic){
-			mqtt3_db_messages_easy_queue(db, context, context->bridge->notification_topic, 1, 2, &notification_payload, 1);
-			rc = _mosquitto_will_set(context, context->bridge->notification_topic, 2, &notification_payload, 1, true);
+			mqtt3_db_messages_easy_queue(db, context, context->bridge->notification_topic, 1, 1, &notification_payload, 1);
+			rc = _mosquitto_will_set(context, context->bridge->notification_topic, 1, &notification_payload, 1, true);
 			if(rc != MOSQ_ERR_SUCCESS){
 				return rc;
 			}
@@ -190,8 +189,8 @@ int mqtt3_bridge_connect(struct mosquitto_db *db, struct mosquitto *context)
 			if(!notification_topic) return MOSQ_ERR_NOMEM;
 
 			snprintf(notification_topic, notification_topic_len+1, "$SYS/broker/connection/%s/state", context->id);
-			mqtt3_db_messages_easy_queue(db, context, notification_topic, 1, 2, &notification_payload, 1);
-			rc = _mosquitto_will_set(context, notification_topic, 2, &notification_payload, 1, true);
+			mqtt3_db_messages_easy_queue(db, context, notification_topic, 1, 1, &notification_payload, 1);
+			rc = _mosquitto_will_set(context, notification_topic, 1, &notification_payload, 1, true);
 			if(rc != MOSQ_ERR_SUCCESS){
 				_mosquitto_free(notification_topic);
 				return rc;
